--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -495,7 +495,7 @@ body {
     left: -410px;
     max-width: 350px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     -webkit-box-shadow: 0px 3px 10px black;
             box-shadow: 0px 3px 10px black;
     padding: 60px 20px;
