--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -403,7 +403,7 @@
       left:-410px;    
       max-width: 350px;
       width: 100%;
-      // height: 100%;
+      height: 100vh;
       box-shadow: 0px 3px 10px hsl(0, 0%, 0%);     
       padding: 60px 20px;
       transition: all .4s ease-in;
